@@ -8,73 +8,100 @@ import com.techStack.authSys.models.user.Roles;
 import com.techStack.authSys.models.user.User;
 import com.techStack.authSys.repository.authorization.PermissionProvider;
 import com.techStack.authSys.util.firebase.FirestoreUtil;
+import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
-import reactor.core.publisher.Mono;
 import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 import reactor.core.scheduler.Schedulers;
 
 import javax.annotation.PostConstruct;
+import java.time.Clock;
 import java.time.Instant;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
+/**
+ * Permission Service
+ *
+ * Manages role-based and user-specific permissions with caching.
+ * Implements Fine-Grained Authorization (FGA) with RBAC and ABAC support.
+ */
 @Service
+@RequiredArgsConstructor
 public class PermissionService implements PermissionProvider {
 
     private static final Logger logger = LoggerFactory.getLogger(PermissionService.class);
+
+    /* =========================
+       Dependencies
+       ========================= */
+
+    private final PermissionsConfig permissionsConfig;
+    private final Firestore firestore;
+    private final Clock clock;
+
+    /* =========================
+       In-Memory Caches
+       ========================= */
 
     private final Map<String, Set<Permissions>> userPermissions = new ConcurrentHashMap<>();
     private final Map<Roles, Set<Permissions>> rolePermissions = new ConcurrentHashMap<>();
     private final Map<String, Map<String, Map<String, String>>> userAttributes = new ConcurrentHashMap<>();
 
-    private final PermissionsConfig permissionsConfig;
-    private final Firestore firestore;
-
-    public PermissionService(PermissionsConfig permissionsConfig, Firestore firestore) {
-        this.permissionsConfig = permissionsConfig;
-        this.firestore = firestore;
-    }
+    /* =========================
+       Initialization
+       ========================= */
 
     @PostConstruct
     public void init() {
         reloadPermissions();
+        logger.info("✅ PermissionService initialized with {} role configurations",
+                rolePermissions.size());
     }
 
-    // ==================== ROLE-BASED PERMISSIONS ====================
+    /* =========================
+       Role-Based Permissions
+       ========================= */
 
     @Override
     @Cacheable(value = "rolePermissions", key = "#role.name()")
     public Set<Permissions> getPermissionsForRole(Roles role) {
-        return rolePermissions.getOrDefault(role, Collections.emptySet());
+        Set<Permissions> permissions = rolePermissions.getOrDefault(role, Collections.emptySet());
+        logger.debug("Retrieved {} permissions for role {}", permissions.size(), role);
+        return new HashSet<>(permissions); // Return copy to prevent modification
     }
 
     @Override
     @CacheEvict(value = {"rolePermissions", "effectivePermissions"}, allEntries = true)
     public Mono<Void> assignRole(String userId, Roles role) {
         return Mono.defer(() -> {
+            Instant now = clock.instant();
+
             try {
                 Set<Permissions> permissions = getPermissionsForRole(role);
 
-                // Store in memory cache
+                // Update in-memory cache
                 userPermissions.put(userId, new HashSet<>(permissions));
 
                 logger.info("✅ Role {} assigned to user {} with {} permissions",
                         role, userId, permissions.size());
 
-                // Persist to Firestore
-                Map<String, Object> roleData = new HashMap<>();
-                roleData.put("userId", userId);
-                roleData.put("role", role.name());
-                roleData.put("permissions", permissions.stream()
-                        .map(Permissions::name)
-                        .collect(Collectors.toList()));
-                roleData.put("assignedAt", Instant.now());
+                // Prepare Firestore data
+                Map<String, Object> roleData = Map.of(
+                        "userId", userId,
+                        "role", role.name(),
+                        "permissions", permissions.stream()
+                                .map(Permissions::name)
+                                .collect(Collectors.toList()),
+                        "assignedAt", now
+                );
 
+                // Persist to Firestore
                 DocumentReference roleRef = firestore
                         .collection("users")
                         .document(userId)
@@ -85,26 +112,39 @@ public class PermissionService implements PermissionProvider {
 
                 return Mono.fromFuture(() -> FirestoreUtil.toCompletableFuture(future))
                         .doOnSuccess(result ->
-                                logger.info("✅ Saved role {} to Firestore for user {}", role.name(), userId))
+                                logger.info("✅ Persisted role {} to Firestore for user {}",
+                                        role.name(), userId))
                         .then();
 
             } catch (Exception e) {
-                logger.error("❌ Error assigning role {} to user {}: {}", role, userId, e.getMessage(), e);
+                logger.error("❌ Error assigning role {} to user {}: {}",
+                        role, userId, e.getMessage(), e);
                 return Mono.error(e);
             }
         }).subscribeOn(Schedulers.boundedElastic());
     }
 
-    // ==================== PERMISSION CHECKING ====================
+    /* =========================
+       Permission Checking
+       ========================= */
 
+    /**
+     * Check if user has a specific permission.
+     * Supports wildcard permissions (e.g., "users:*" implies "users:read").
+     */
     public Mono<Boolean> hasPermission(String userId, String requiredPermission) {
         return Mono.justOrEmpty(userPermissions.get(userId))
                 .flatMapMany(Flux::fromIterable)
-                .any(perm -> perm.implies(Permissions.fromNameSafe(requiredPermission).orElse(null)))
+                .any(perm -> perm.implies(
+                        Permissions.fromNameSafe(requiredPermission).orElse(null)
+                ))
                 .switchIfEmpty(checkRolePermissionsFromFirestore(userId, requiredPermission))
                 .subscribeOn(Schedulers.boundedElastic());
     }
 
+    /**
+     * Fallback to Firestore if not in cache
+     */
     private Mono<Boolean> checkRolePermissionsFromFirestore(String userId, String requiredPermission) {
         return Mono.fromCallable(() ->
                         firestore.collection("users")
@@ -115,7 +155,7 @@ public class PermissionService implements PermissionProvider {
                 .subscribeOn(Schedulers.boundedElastic())
                 .flatMap(doc -> {
                     @SuppressWarnings("unchecked")
-                    List<String> roleNames = (List<String>) doc.get("roleNames");
+                    List<String> roleNames = (List<String>) doc.get("roles");
 
                     if (roleNames == null || roleNames.isEmpty()) {
                         return Mono.just(Collections.<Roles>emptyList());
@@ -132,27 +172,30 @@ public class PermissionService implements PermissionProvider {
                 .flatMap(role -> Flux.fromIterable(
                         rolePermissions.getOrDefault(role, Collections.emptySet())
                 ))
-                .any(perm ->
-                        perm.implies(
-                                Permissions.fromNameSafe(requiredPermission).orElse(null)
-                        )
-                );
+                .any(perm -> perm.implies(
+                        Permissions.fromNameSafe(requiredPermission).orElse(null)
+                ));
     }
 
-    // ==================== EFFECTIVE PERMISSIONS RESOLUTION ====================
+    /* =========================
+       Effective Permissions Resolution
+       ========================= */
 
     /**
-     * ✅ FIXED: Resolves effective permissions as Permissions enum set
-     * This is the CORRECT implementation for permission resolution
+     * Resolve effective permissions for a user.
+     * Combines role-based and user-specific permissions.
+     *
+     * @param user the user entity
+     * @return set of permission names
      */
     @Override
     @Cacheable(value = "effectivePermissions", key = "#user.id")
-    public Set<String> resolveEffectivePermission(User user) {
+    public Set<String> resolveEffectivePermissions(User user) {
         Set<Permissions> effectivePermsEnum = new HashSet<>();
 
-        // 1. Add user-specific permissions (convert Strings to Enums)
-        if (user.getPermissions() != null && !user.getPermissions().isEmpty()) {
-            user.getPermissions().forEach(permName -> {
+        // 1. Add user-specific permissions
+        if (user.getAdditionalPermissions() != null) {
+            user.getAdditionalPermissions().forEach(permName -> {
                 Permissions.fromNameSafe(permName).ifPresent(effectivePermsEnum::add);
             });
         }
@@ -160,18 +203,21 @@ public class PermissionService implements PermissionProvider {
         // 2. Add role-based permissions
         if (user.getRoleNames() != null && !user.getRoleNames().isEmpty()) {
             for (String roleName : user.getRoleNames()) {
-                Roles.fromName(roleName).ifPresentOrElse(role -> {
-                    Set<Permissions> rolePerms = getPermissionsForRole(role);
-                    effectivePermsEnum.addAll(rolePerms);
-                }, () -> logger.warn("⚠️ Unknown role [{}] for user [{}]", roleName, user.getId()));
+                Roles.fromName(roleName).ifPresentOrElse(
+                        role -> {
+                            Set<Permissions> rolePerms = getPermissionsForRole(role);
+                            effectivePermsEnum.addAll(rolePerms);
+                            logger.debug("Added {} permissions from role {} for user {}",
+                                    rolePerms.size(), role, user.getId());
+                        },
+                        () -> logger.warn("⚠️ Unknown role [{}] for user [{}]", roleName, user.getId())
+                );
             }
-        }
-
-        if (user.getRoleNames() == null || user.getRoleNames().isEmpty()) {
+        } else {
             logger.warn("⚠️ No roles found for user {}", user.getEmail());
         }
 
-        // Convert back to String names for storage/transmission
+        // Convert to String names
         Set<String> permissionNames = effectivePermsEnum.stream()
                 .map(Permissions::name)
                 .collect(Collectors.toSet());
@@ -183,22 +229,34 @@ public class PermissionService implements PermissionProvider {
     }
 
     /**
-     * ✅ Alias method - delegates to resolveEffectivePermission
+     * Alias method for backward compatibility
      */
     @Override
-    public Set<String> resolveEffectivePermissions(User user) {
-        return resolveEffectivePermission(user);
+    public Set<String> resolveEffectivePermission(User user) {
+        return resolveEffectivePermissions(user);
     }
 
-    // ==================== ABAC: ATTRIBUTE-BASED ACCESS CONTROL ====================
+    /* =========================
+       ABAC: Attribute-Based Access Control
+       ========================= */
 
-    public Mono<Boolean> hasPermissionWithAttributes(String userId, String requiredPermission, Map<String, String> resourceAttributes) {
+    /**
+     * Check permission with attribute conditions
+     */
+    public Mono<Boolean> hasPermissionWithAttributes(
+            String userId,
+            String requiredPermission,
+            Map<String, String> resourceAttributes
+    ) {
         return Mono.zip(
                 hasPermission(userId, requiredPermission),
                 checkAttributes(userId, resourceAttributes)
         ).map(tuple -> tuple.getT1() && tuple.getT2());
     }
 
+    /**
+     * Verify user attributes match resource requirements
+     */
     private Mono<Boolean> checkAttributes(String userId, Map<String, String> resourceAttributes) {
         return Mono.justOrEmpty(userAttributes.get(userId))
                 .map(userAttrNamespaces ->
@@ -223,10 +281,13 @@ public class PermissionService implements PermissionProvider {
                 .computeIfAbsent(userId, k -> new ConcurrentHashMap<>())
                 .computeIfAbsent(namespace, k -> new ConcurrentHashMap<>())
                 .put(key, value);
-        logger.info("User attribute added: {}, {}:{}={}", userId, namespace, key, value);
+
+        logger.debug("Added user attribute: {} {}:{}={}", userId, namespace, key, value);
     }
 
-    // ==================== USER-SPECIFIC PERMISSION MANAGEMENT ====================
+    /* =========================
+       User-Specific Permission Management
+       ========================= */
 
     @Override
     @CacheEvict(value = "effectivePermissions", key = "#userId")
@@ -245,7 +306,9 @@ public class PermissionService implements PermissionProvider {
         logger.info("Permission {} revoked from user {}", permission, userId);
     }
 
-    // ==================== PERMISSION PROVIDER INTERFACE ====================
+    /* =========================
+       Permission Provider Interface
+       ========================= */
 
     @Override
     public String[] getPermissions() {
@@ -272,26 +335,27 @@ public class PermissionService implements PermissionProvider {
     public void reloadPermissions() {
         rolePermissions.clear();
 
-        // Default role permissions
-        rolePermissions.put(Roles.SUPER_ADMIN, new HashSet<>(Arrays.asList(Permissions.getSuperAdminPermissions())));
-        rolePermissions.put(Roles.ADMIN, new HashSet<>(Set.of(Permissions.ADMIN)));
-        rolePermissions.put(Roles.MANAGER, new HashSet<>(Set.of(Permissions.MANAGER)));
-        rolePermissions.put(Roles.USER, new HashSet<>(Arrays.asList(Permissions.getUserPermissions())));
-
-        addSpecialPermissions(Roles.MANAGER, Permissions.getManagerPermissions());
-        addSpecialPermissions(Roles.USER, Permissions.getUserPermissions());
+        // Load default role permissions
+        rolePermissions.put(Roles.SUPER_ADMIN,
+                new HashSet<>(Arrays.asList(Permissions.getSuperAdminPermissions())));
+        rolePermissions.put(Roles.ADMIN,
+                new HashSet<>(Set.of(Permissions.ADMIN)));
+        rolePermissions.put(Roles.MANAGER,
+                new HashSet<>(Arrays.asList(Permissions.getManagerPermissions())));
+        rolePermissions.put(Roles.USER,
+                new HashSet<>(Arrays.asList(Permissions.getUserPermissions())));
 
         // Apply YAML overrides
-        permissionsConfig.getRoleOverrides().forEach((role, perms) -> {
-            rolePermissions.computeIfAbsent(role, r -> new HashSet<>()).addAll(perms);
-        });
+        if (permissionsConfig != null && permissionsConfig.getRoleOverrides() != null) {
+            permissionsConfig.getRoleOverrides().forEach((role, perms) -> {
+                rolePermissions.computeIfAbsent(role, r -> new HashSet<>()).addAll(perms);
+            });
+        }
 
         logger.info("✅ Permissions reloaded: {} roles configured", rolePermissions.size());
-    }
-
-    private void addSpecialPermissions(Roles role, Permissions[] permissions) {
-        rolePermissions.computeIfAbsent(role, r -> new HashSet<>())
-                .addAll(Arrays.asList(permissions));
+        rolePermissions.forEach((role, perms) ->
+                logger.debug("  - {}: {} permissions", role, perms.size())
+        );
     }
 
     @Override
